BUILD: Improved alt text of mountains photos

--- a/site/content/stats/mountains/2010-08.md
+++ b/site/content/stats/mountains/2010-08.md
@@ -7,6 +7,7 @@ distance: "53.7"
 mountains: "5"
 mountains_new: "5"
 steps: "Not tracked"
+alt: "Castle Crag taken from near Grange in the Lake District"
 ---
 
 Latrigg, Helm Crag, Gibson Knott, Calf Crag, & Castle Crag
