--- a/site/content/stats/mountains/2013-08.md
+++ b/site/content/stats/mountains/2013-08.md
@@ -7,6 +7,7 @@ distance: "60.2"
 mountains: "7"
 mountains_new: "6"
 steps: "139,624"
+alt: "The path up Helvellyn in the Lake District"
 ---
 
 Latrigg, Cat Bells, Maiden Moor, High Spy, Helvellyn, Hindscarth, & Robinson
