--- a/site/content/stats/mountains/2015-03.md
+++ b/site/content/stats/mountains/2015-03.md
@@ -7,6 +7,7 @@ distance: "79.3"
 mountains: "20"
 mountains_new: "16"
 steps: "169,773"
+alt: "Looking towards Bow Fell from High Raise in the Lake District"
 ---
 
 Helm Crag, Gibson Knott, Calf Crag, Tarn Crag, Loft Crag, Pike O'Stickle, Harrison Stickle, Pavey Ark, Thunacar Knott, High Raise, Sergeant Man, Seat Sandal, Fairfield, Hart Crag, Dove Crag, High Pike, Low Pike, Sergeant's Crag, Eagle Crag, & Ullscarf
