--- a/site/content/stats/mountains/2016-03.md
+++ b/site/content/stats/mountains/2016-03.md
@@ -7,6 +7,7 @@ distance: "78.1"
 mountains: "10"
 mountains_new: "10"
 steps: "167,805"
+alt: "Bow Fell at the head of Great Langdale in the Lake District"
 ---
 
 Holme Fell, Black Fell, Coniston Old Man, Brim Fell, Dow Crag, Wetherlam, Swirl How, Great Carrs, Grey Friar, & Lingmoor Fell
