--- a/site/content/stats/mountains/2016-06.md
+++ b/site/content/stats/mountains/2016-06.md
@@ -7,6 +7,7 @@ distance: "39.5"
 mountains: "4"
 mountains_new: "Brecon Beacons"
 steps: "84,926"
+alt: "Path through a hay meadow in the Brecon Beacons"
 ---
 
 Cribyn, Pen y Fan, Corn Du, & Fan y Big
