--- a/site/content/stats/mountains/2016-11.md
+++ b/site/content/stats/mountains/2016-11.md
@@ -7,6 +7,7 @@ distance: "67.4"
 mountains: "3"
 mountains_new: "Snowdonia"
 steps: "144,753"
+alt: "Craig Cau from Llyn Cau in Snowdonia"
 ---
 
 Mynydd Ceiswyn, Craig Cau, & Cadair Idris
