--- a/site/content/stats/mountains/2017-03.md
+++ b/site/content/stats/mountains/2017-03.md
@@ -7,6 +7,7 @@ distance: "73.9"
 mountains: "12"
 mountains_new: "12"
 steps: "156,665"
+alt: "Looking down into Troutbeck valley from Thornthwaite Crag in the Lake District"
 ---
 
 Troutbeck Tongue, Sallows, Yoke, Ill Bell, Froswick, Thornthwaite Crag, High Street, Mardale Ill Bell, Gray Crag, Caudale Moor, Hartsop Dodd, & Sour Howes
