--- a/site/content/stats/mountains/2018-08.md
+++ b/site/content/stats/mountains/2018-08.md
@@ -7,6 +7,7 @@ distance: "80.0"
 mountains: "2"
 mountains_new: "0"
 steps: "171,862"
+alt: "Brundholme Wood on the flanks of Latrigg in the Lake District"
 ---
 
 Latrigg, & Dodd
