--- a/site/content/stats/mountains/2011-08.md
+++ b/site/content/stats/mountains/2011-08.md
@@ -7,6 +7,7 @@ distance: "45.9"
 mountains: "1"
 mountains_new: "0"
 steps: "Not tracked"
+alt: "Buttermere valley from near Grey Knotts in the Lake District"
 ---
 
 Latrigg. Either walked in valleys or just missed the summits
