--- a/site/content/stats/mountains/2012-08.md
+++ b/site/content/stats/mountains/2012-08.md
@@ -7,6 +7,7 @@ distance: "62.5"
 mountains: "4"
 mountains_new: "3"
 steps: "156,831"
+alt: "The vale of Keswick taken from the slopes of Skiddaw in the Lake District"
 ---
 
 Walla Crag, Dodd, Skiddaw, & Latrigg
