--- a/site/content/stats/mountains/2014-04.md
+++ b/site/content/stats/mountains/2014-04.md
@@ -7,6 +7,7 @@ distance: "70.4"
 mountains: "21"
 mountains_new: "17"
 steps: 161,920"
+alt: "Looking down into Grasmere valley in the Lake District"
 ---
 
 Heron Pike, Nab Scar, Loughrigg Fell, Stone Arthur, Great Rigg, Fairfield, Dollywagon Pike, Nethermost Pike, Helvellyn, White Side, Raise, Stybarrow Dodd, Watson's Dodd, Great Dodd, Clough Head, Steel Fell, Calf Crag, Gibson Knott, Helm Crag, Blea Rigg, & Silver How
