--- a/site/content/stats/mountains/2014-08.md
+++ b/site/content/stats/mountains/2014-08.md
@@ -7,6 +7,7 @@ distance: "76.2"
 mountains: "8"
 mountains_new: "5"
 steps: "163,772"
+alt: "Great End on the way up Scafell Pike in the Lake District"
 ---
 
 Latrigg, Skiddaw Little Man, Skiddaw, Carl Side, Scafell Pike, Barrow, Outerside, & Walla Crag
