--- a/site/content/stats/mountains/2015-08.md
+++ b/site/content/stats/mountains/2015-08.md
@@ -7,6 +7,7 @@ distance: "77.1"
 mountains: "4"
 mountains_new: "3"
 steps: "165,705"
+alt: "The Langdale Pikes in the Lake District"
 ---
 
 Loughrigg, Red Screes, Middle Dodd, & Wansfell
