--- a/site/content/stats/mountains/2016-08.md
+++ b/site/content/stats/mountains/2016-08.md
@@ -7,6 +7,7 @@ distance: "76.3"
 mountains: "4"
 mountains_new: "2"
 steps: "163,848"
+alt: "The vale of Keswick from Blencathra in the Lake District"
 ---
 
 Walla Crag, Bleaberry Fell, Blencathra, & Latrigg
