--- a/site/content/stats/mountains/2019-08.md
+++ b/site/content/stats/mountains/2019-08.md
@@ -7,6 +7,7 @@ distance: "48.2"
 mountains: "0"
 mountains_new: "0"
 steps: "105,738"
+alt: "Looking towards High Spy from Stonethwaite in the Lake District"
 ---
 
 Injuries meant I didn't climb any mountains
