FIX: Hugo schema error preventing building

--- a/site/content/stats/mountains/2017-11.md
+++ b/site/content/stats/mountains/2017-11.md
@@ -7,7 +7,7 @@ distance: "63.6"
 mountains: "17"
 mountains_new: "13"
 steps: "134,404"
-alt: ""St. Sunday Crag, Seat Sandal, and Dollywaggon Pike with Grisedale Tarn between them in the Lake District"
+alt: "St. Sunday Crag, Seat Sandal, and Dollywaggon Pike with Grisedale Tarn between them in the Lake District"
 ---
 
 St. Sunday Crag, Birks, Arnison Crag, Birkhouse Moor, Catstycam, Helvellyn, White Side, Raise, Hart Side, Sheffield Pike, Glenridding Dodd, Place Fell, Hallin Fell, Hartsop above How, Hart Crag, Dove Crag, Little Hart Crag, & High Hartsop Dodd
