--- a/site/content/stats/distances/2019.md
+++ b/site/content/stats/distances/2019.md
@@ -2,4 +2,4 @@
 handle: "2019"
 ---
 
-Testing stuff.
+The year started so well, running further and faster than I had in years. Unfortunately, unbeknownst to me, I'd picked up a stress fracture on my left shin in December 2018. I continued running until a swelling finally got painful enough to warrant finding out what was going on in July and that's when I stopped running and reduced my walking. And that's how I spent the rest of my year, waiting, frustrated.
