CONTENT: Updated year summaries

--- a/site/content/stats/distances/2009.md
+++ b/site/content/stats/distances/2009.md
@@ -2,4 +2,4 @@
 handle: "2009"
 ---
 
-Last year of University when I started tracking my distances using Google Earth and Maps to calculate everything (no Fitbit back then). Coincidentally the 1.2 mile per day average was the distance from where I lived to the University campus. Many days I didn't even leave the house.
+Last year of University when I started tracking my distances using Google Earth and Maps to calculate everything (no Fitbit back then). Coincidentally the 1.2 mile per day average was the distance from where I lived to the University campus. Many days I didn't even leave the house. I only started tracking from part way through the year.
