FEATURE: Added new parameter to yearly summaries so the titles are directly linked to their respective Daytum pages, added missing years

--- a/site/content/stats/distances/2017.md
+++ b/site/content/stats/distances/2017.md
@@ -1,5 +1,6 @@
 ---
 handle: "2017"
+page: 163302
 ---
 
 The year of upheavals; moved out of Winchester, left Intermedia, joined We Make Websites and moved to London.
