--- a/site/content/stats/distances/2009.md
+++ b/site/content/stats/distances/2009.md
@@ -1,5 +1,6 @@
 ---
 handle: "2009"
+page: 127884
 ---
 
 Last year of University when I started tracking my distances using Google Earth and Maps to calculate everything (no Fitbit back then). Coincidentally the 1.2 mile per day average was the distance from where I lived to the University campus. Many days I didn't even leave the house. I only started tracking from part way through the year.
