FIX: Knott Rigg typo

--- a/site/content/stats/mountains/2020-08.md
+++ b/site/content/stats/mountains/2020-08.md
@@ -12,4 +12,4 @@ alt: "Looking up the valley between High Spy (left) and Dale Head in the Lake Di
 srcset: true
 ---
 
-Latrigg, Dale Head, Hindscarth, Robinson, Knott Crag, Ard Crags, Walla Crag, Eel Crag, Sail, Scar Crags, & Causey Pike
+Latrigg, Dale Head, Hindscarth, Robinson, Knott Rigg, Ard Crags, Walla Crag, Eel Crag, Sail, Scar Crags, & Causey Pike
