--- a/site/content/stats/distances/2013.md
+++ b/site/content/stats/distances/2013.md
@@ -1,6 +1,6 @@
 ---
 handle: "2013"
-page: 144714
+page: "45b77b9b-0e65-11eb-8e0c-0242c0a85002"
 ---
 
 My best year of running; long runs on Wednesday, Thursday, and Saturday with a swim Thursday afternoon. Although I've never reached the same mileage I've run faster and for longer in a single go since.
