--- a/site/content/stats/distances/2014.md
+++ b/site/content/stats/distances/2014.md
@@ -1,6 +1,6 @@
 ---
 handle: "2014"
-page: 152964
+page: "45d811e0-0e65-11eb-8e0c-0242c0a85002"
 ---
 
 The best day of walking I've ever had; 1 April 2014, 22 miles, 12 mountains climbed, a bit of snow on the ground and beautiful sunshine. Also the first time I visited the Lake District by myself.
