--- a/site/content/stats/distances/2018.md
+++ b/site/content/stats/distances/2018.md
@@ -1,6 +1,6 @@
 ---
 handle: "2018"
-page: 165545
+page: "460a8e6e-0e65-11eb-8e0c-0242c0a85002"
 ---
 
 Things just carried on as they were until I had to reduce everything after collapsing due to exhaustion. Not a great way to spend the day and it made me feel terrible for the rest of the year.
