--- a/site/content/stats/distances/2019.md
+++ b/site/content/stats/distances/2019.md
@@ -1,6 +1,6 @@
 ---
 handle: "2019"
-page: 191781
+page: "467936d8-0e65-11eb-8e0c-0242c0a85002"
 ---
 
 The year started so well, running further and faster than I had in years. Unfortunately, unbeknownst to me, I'd picked up a stress fracture in my left shin in December 2018. I continued running until a swelling finally got painful enough to warrant finding out what was going on in July and that's when I stopped running and reduced my walking. And that's how I spent the rest of my year, waiting, frustrated.
