--- a/site/content/stats/distances/2012.md
+++ b/site/content/stats/distances/2012.md
@@ -1,6 +1,6 @@
 ---
 handle: "2012"
-page: 130952
+page: "4581c1b9-0e65-11eb-8e0c-0242c0a85002"
 ---
 
 Intermedia moved to Eastleigh which was a much easier commute using public transport.
