--- a/site/content/stats/distances/2016.md
+++ b/site/content/stats/distances/2016.md
@@ -1,6 +1,6 @@
 ---
 handle: "2016"
-page: 161940
+page: "45fb9b2b-0e65-11eb-8e0c-0242c0a85002"
 ---
 
 Got my first car at the beginning of the year which spelt the end for regular train commutes.
